Fixes position of ical icon and alignment of events in week view
Corrected positioning of ical icon on weekview of desktop calendar
as well as alignment and width of events.

mario h.
node/62464

--- a/sites/all/themes/slac/sass/components/_calendar.scss
+++ b/sites/all/themes/slac/sass/components/_calendar.scss
@@ -755,6 +755,10 @@ table.calendar-legend tr.even .stripe {
   position: absolute;
   width: 98%;
   left: 5px;
+
+  @include breakpoint($tablet-large) {
+    left: 2px;
+  }
 }
 
 .calendar-calendar .day-view td .stripe,
@@ -1053,6 +1057,12 @@ ul.calendar-links,
 
 .weekview .link-ical {
   top: 7px;
+}
+
+@include breakpoint($tablet-large) {
+  .week-view .all-day .link-ical {
+    top: 11px;
+  }
 }
 
 .dayview .link-ical,
